--- a/templates/index.html
+++ b/templates/index.html
@@ -6,23 +6,38 @@
 		<link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css">
 		<link rel="stylesheet" href="/static/css/geocoding.css" type="text/css">
 		<script type="text/javascript" src="/static/js/jquery.js"></script>
+		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 		<script type="text/javascript" src="/static/js/geocoding.js"></script>
 	</head>
 	<body>
 	<div class="container">
 
+		<div class="header">
+			<ul class="nav nav-pills pull-right">
+				<li class="active"><a href="/">Home</a></li>
+				<li><a target="_blank" href="http://elle-est-au-nord.com/">About me</a></li>
+			</ul>
+			<h3 class="text-muted">Geolocation</h3>
+		</div>
+
 		<div class="jumbotron">
-	        <h1>How far are you from our offices?</h1>
+	        	<h1>How far are you from our office?</h1>
 	        
-	        <p>
-	          <a class="btn btn-lg btn-primary" href="#" role="button" onclick="getLocation();">
-	          	View distance &raquo;</a>
-	        </p>
+			<p>
+	              		<a class="btn btn-lg btn-primary" role="button">
+					View distance &raquo;</a>
+	            	</p>
 
-	        <div id="demo"><p>wait and see!</p></div>
-	        
-	    </div>
-
-    </div>
+	            	<div id="demo"><p>Click and see!</p></div>
+		</div>
+		<div class="viewMap">
+			<button class="btn btn-lg" type="button">View on a map</button>
+		</div>
+		<div id="map">
+		</div>
+		<div class="footer">
+			<p>&copy; Ele - 2014</p>
+		</div>
+    	</div>
 	</body>
 </html>
