changing the project (temporarily) to distance to Paris

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 		</div>
 
 		<div class="jumbotron">
-	        	<h1>How far are you from our office?</h1>
+	        	<h1>How far are you from Paris?</h1>
 	        
 			<p>
 	              		<a class="btn btn-lg btn-primary" role="button">
